Styles/style.css
@font-face {
  font-family: Neue Haas Medium;
  src: url(/Fonts/nhaasgrotesktxpro-65md.ttf);
}

@font-face {
  font-family: Neue Haas Regular;
  src: url(/Fonts/nhaasgrotesktxpro-55rg.ttf);
}

@font-face {
  font-family: Neue Haas Bold;
  src: url(/Fonts/nhaasgrotesktxpro-75bd.ttf);
}

html, body {
  height: 100%;
  scroll-behavior: smooth;
}

body {
	font-family: Neue Haas Medium, sans-serif;
	font-size: 16px;
	line-height: 1.15;
  background-color: #000000;
	color: #000000;
}

section {
  scroll-snap-align: start;
}

section.about {
  background-image: url("/Images/cloud-background-texture-gradient.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: column;
  height: 100%;
}

.spin {   
  max-height: 110px;
  float: left;
  margin-right: 15px;
  padding: 5px;
}

.logo {
  font-size: 18px;
  overflow: hidden;
}

.logo-text {
  height: 110px;
  display: flex; 
  flex-direction: column;
  align-items: space-between;
  vertical-align: middle;
  font-size: 31px;
  font-family: Neue Haas Bold, sans-serif;
}

.logo-text div {
  text-align: left;
}

.menu {
  display: flex;
  width: 720px;
  flex-direction: row;
  justify-content: space-between;
}

.menu div {
  border: 2px solid #000000;
  background: white;
  padding: 5px 25px 5px 25px;
  text-align: center;
  vertical-align: middle;
}

.menu a {
  text-decoration: none;
  color: black;
  width: 30%;
}

.menu div:hover {
  background: black;
  color: white;
}


/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: absolute; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: none; /* Fallback color */
}

/* Modal Content/Box */
.modal-content {
  background-color: #dfdfdf;
  border: 2px solid #000000;
  padding: 20px;
  width: 70%; /* Could be more or less, depending on screen size */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* The Close Button */
.close {
  color: rgb(99, 99, 99);
  font-size: 28px;
  display: block;
  text-align: right;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal-content p {
  font-size: 14px;
  font-family: Neue Haas Regular;
  margin-bottom: 10px;
}

.last {
  margin-bottom: 25px;
}

.controls {
  width: 100%;
  padding-top: 15px;
  font-size: 14px;
  color: rgb(99, 99, 99);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-transform: uppercase;
}

#myBtn {
  bottom: 8px;
  right: 8px;
  position: absolute;
  border: none;
  background: none;
}

section.about svg {
  width: 20px;
}

#error {
  display: none;
  position: fixed;
  top: 20px; left: 20px; right: 20px; bottom: 20px;
  background: #444;
  padding: 8px;
  white-space: pre;
  color: #fff;
  font-family: monospace;
  font-weight: bold;
}

#info {
  font-size: 12px;
  bottom: 4px;
  left: 8px;
  position: absolute;
}

#fpsdisplay {
  display: inline-block;
}

#Loading {
  position: absolute;
  top: 4px;
  left: 8px;
}

#Loading h4 {
  margin: 0px;
}

#viewspacecontainer {
  position: relative;
  text-align: left;
  display: block;
  margin: 0 auto;
  margin-bottom: 20px;
}

/* The main SNeRG view */
.view {
  margin: 0 auto;
  border: 3px solid #000;
  overflow: hidden;
  transform-origin: top left;
}


section.infosection {
  background-color: #000000;
  color: #ffffff;
  position: relative;
  padding: 50px;
  line-height: 1.2;
  height: 100%;
}

.info-container {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: flex-start;
  height: 841px;
}

h2 {
  font-size: 24px;
  margin-bottom: 50px;
}

section.infosection p {
  font-size: 16px;
  font-family: Neue Haas Regular, sans-serif;
}

.left-info p {
  margin-bottom: 20px;
}

.left-info {
  max-width: 650px;
  padding-right: 70px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.label img {
  max-width: 100px;
}

.label {
  display: flex;
  flex-direction: row;
}

.label-text {
  margin-left: 30px;
  font-size: 14px;
  font-family: Neue Haas Regular, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.label-text a {
  color: white;
}

.info-column-2 {
  font-size: 16px;
  font-family: Neue Haas Regular, sans-serif;
  min-width: 215px;
  overflow-y: scroll;
  max-width: 287.17px;
}

.info-column-2 ul {
  margin-bottom: 20px;
}

.info-column-2 a {
  text-decoration: underline;
}

section.infosection h3 {
  font-family: Neue Haas Medium, sans-serif;
  margin-bottom: 10px;
  text-transform: uppercase;
}

section.infosection a {
  cursor: pointer;
}


.more-info {
  padding: 10px 0px;
}

.more-info p {
  margin-bottom: 10px;
  color: #b1b1b1;
}

.more-info a {
  text-decoration: none;
  color: #b1b1b1;
}

.more-info a:hover {
  text-decoration: underline;
}

.label-mobile {
  display: none;
}

.cloud-mobile {
  display: none;
}

.disclaimer {
  display: none;
}

@keyframes spinning {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.spin:hover {
animation-name: spinning;
animation-duration: 20s;
animation-iteration-count: infinite;
/* linear | ease | ease-in | ease-out | ease-in-out */
animation-timing-function: linear;
}

@media (max-height: 700px) and (min-width: 740px) {
  .logo {
    display: none;
  }

  section.about {
    justify-content: center;
  }
}

@media (max-width: 816px) {
  section.infosection {
    padding: 40px 20px;
  }
}

@media (max-width: 740px) {

  section.about {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    background-image: url("/Images/cloud-background-texture-small.jpg");
    height: auto;
  }

  .logo {
    margin: 30px 0px;
  }

  .spin {
    animation-name: spinning;
    animation-duration: 30s;
    animation-iteration-count: infinite;
    /* linear | ease | ease-in | ease-out | ease-in-out */
    animation-timing-function: linear;
    }

  .menu {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    align-items: center;
  }
  
  .menu div {
    border: 0px;
    border-top: 2px solid #000000;
    background: white;
    width: 100%;
    padding: 5px 0px;
    text-align: center;
    vertical-align: middle;
  }

  .menu div {
    border-right: 3px solid black;
  }

  #last {
    border-right: 0;
  }

  .menu a {
    width: 100%;
    font-size: 20px;
  }
  
  .menu div:hover {
    background: white;
    color: black;
  }

  .menu div:active {
    background: black;
    color: white;
  }

  .cloud {
    display: none;
  }

  .info-container {
    flex-direction: column;
    height: auto;
  }

  .left-info {
    max-width: none;
    padding-right: 0px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .label {
    display: none;
  }

  h2 {
    font-size: 20px;
    margin-bottom: 40px;
  }

  section.infosection p {
    font-size: 18px;
  }

  .left-info-bio p:last-child {
    margin-bottom: 40px;
  }

  .info-column-2 {
    width: 100%;
    max-width: none;
    font-size: 18px;
  }

  .info-column-2 ul {
    margin-bottom: 30px;
    line-height: 1.5;
  }

  .disclaimer {
    display: initial;
  }

  .label-mobile {
    padding-top: 30px;
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 20px;
  }

  .label-mobile img {
    max-width: 70px;
  }

  .label-text {
    margin-left: 10px;
  }

  .label-text a {
    color: white;
  }

#label-text-mobile {
    margin-bottom: 0px;
    font-size: 14px;
  }

  .more-info a {
    text-decoration: underline;
  }

}

